# em803

./: .gitignore  CMakeLists.txt  cm  cmj  settings.json
.cache/clangd/index/: ALU8080.h.6D32D067B2A4C2AB.idx  AddMachineDialog.h.48AF6E3A9E32ECF1.idx  AssetLoader.h.178DC9FF0173481F.idx  BusyWait.h.B93F44A1A24DD806.idx  CPU8080.h.62C0C4EABCAE0E0A.idx  Calcs.h.28740F2ABFAFF6C4.idx  DejaVuSansMonoFontData.h.9460B58E1927F0E3.idx  EmulatorWindow8080.h.5663E15DAEBB3DB9.idx  IMemory8080.h.3A58CC93D17FD5C1.idx  IOPorts8080.h.5F09BD0F731D9E9A.idx  IRegisters8080.h.655CCC76B5EA201E.idx  ITerminalAccess.h.29FD584AF49752F1.idx  MachineProfile.h.0827F0F8844645E8.idx  MachinesManager.h.036CFF84C8AF9E79.idx  MainWindow.h.2FEB3CEEF8B01EAE.idx  Memory8080.h.12A77B2C5C3127EC.idx  Properties.h.E6005A099B042EA8.idx  QtEmulatorWindow8080.h.ABDDB3C1C6748BF2.idx  RaylibWrapper.h.90BF583BAAEF3E61.idx  Registers8080.h.542DE9ADBF5E4EB1.idx  StartAddress8080Dialog.h.ACDB7768FD755179.idx  Terminal.h.0C5CF6376E3A7E15.idx  Timings8080.h.882EEB120355EDA7.idx  UIRegiterBox.h.05E7666E9A437942.idx  main.cpp.822BDCC9F0DAB912.idx  qrc_fonts.cpp.495428DB168480C5.idx  raygui.h.16F3E12795301274.idx
assets/: resources.qrc
assets/embedded/: DejaVuSansMonoFontData.h
include/datastructs/: MachineProfile.h  MachinesManager.h
include/emulators/common/: Terminal.h  TerminalRL.h
include/emulators/common/factories/: CPUFactory.h
include/emulators/common/interfaces/: ICPU.h  ITerminalAccess.h
include/emulators/common/workers/: CPUWorker.h
include/emulators/i8080/: ALU8080.h  CPU8080.h  IOPorts8080.h  Memory8080.h  Registers8080.h  Timings8080.h
include/emulators/i8080/interfaces/: IMemory8080.h  IRegisters8080.h  Memory8080AccessInterface.h
include/helpers/: AssetLoader.h  BitOps.h  BusyWait.h  Calcs.h  Properties.h  RaylibWrapper.h  StringUtils.h
include/lib/: raygui.h
include/raylib/emulators/: EmulatorWindow8080.h  WinEmu8080.h  old_EmulatorWindow8080.h  old_QtEmulatorWindow8080.h  old_TestWindow.h
include/raylib/ui/: UIRegiterBox.h
include/ui/: MainWindow.h  WinEmu8080.h
include/ui/dialogs/: AddMachineDialog.h  StartAddress8080Dialog.h
include/ui/widgets/: RegisterViewWidget.h  TextTerminalWidget.h
scripts/: clang-wrappers.sh  cxx-wrapper.sh
src/: main.cpp
src/assets/: qrc_fonts.cpp
